samples/_failures_safe/1761597771_502227_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b17b67c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1b17b67c.c:163:9: error: expected expression at end of input
  163 |         } else if (isalpha(current) || current ==
      |         ^
./samples/SAFE/__tmp_1b17b67c.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b17b67c.c:163:9: error: expected declaration or statement at end of input
